# rtime-assistant

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  compose.dev.yml  compose.prod.yml  module-submit.json  pyproject.toml  requirements-dev.txt
apps/assistant-gateway/: README.md  _common.py  _shared_runtime.py  attachments.py  context_sources.py  gateway.py  gateway_config.py  gateway_config_schema.py  gateway_intake.py  gateway_prompt.py  gateway_queue.py  gateway_runner.py  gateway_unlocks.py  memory.py  models.py  providers.py  pyproject.toml  rtime_chat.py
apps/assistant-gateway/tests/: conftest.py  test_config_schema.py
apps/feishu-bridge/: .env.example  AGENTS.md  README.md  _shared_runtime.py  bot_config.py  bridge_runner.py  card_callbacks.py  claude_runner.py  commands.py  feishu_client.py  feishu_config.py  handover.py  handover_service.py  latency_trace.py  latex_unicode.py  main.py  migrate_sessions.py  model_routing.py  output_policy.py  pyproject.toml  qr_request.py  requirements.txt  session_store.py  simulate_message_burst.py  tool_policy.py
apps/feishu-bridge/tests/: conftest.py  test_archive_wiring.py  test_bot_config.py  test_card_callbacks.py  test_claude_rtime_wrapper.py  test_claude_runner.py  test_concurrent_groups.py  test_config_schema.py  test_feishu_client_upload.py  test_group_chat.py  test_handover_service.py  test_integration.py  test_latency_trace.py  test_latex_unicode.py  test_main_stop.py  test_message_debounce.py  test_policy_modules.py  test_qr_request.py  test_qr_request_hook.py  test_session_store.py  test_simulate_message_burst.py  test_tool_policy.py  test_workspace_commands.py
apps/obsidian-rtime-assistant/: AGENTS.md  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  versions.json
apps/qq-bridge/: .env.example  .gitignore  README.md  pyproject.toml
apps/qq-bridge/deploy/: Dockerfile.m2  Dockerfile.spike  compose.spike.yml
apps/qq-bridge/deploy/napcat/: onebot11.example.json
apps/qq-bridge/ops/: direct-rules.example.json  qq-selfheal.service  qq_selfheal.py  qqbridge.env.example  qqbridge.sh
apps/qq-bridge/qq_bridge/: __init__.py  __main__.py  _runtime_path.py  alerts.py  app.py  archive.py  channel_response.py  commands.py  config.py  events.py  media.py  model_runner.py  output_qq.py  selfheal_config.py  sessions.py  tool_policy.py
apps/qq-bridge/qq_bridge/onebot/: __init__.py  cqcode.py  protocol.py  ws_server.py
apps/qq-bridge/tests/: conftest.py  test_alerts.py  test_archive_coverage.py  test_commands_registry.py  test_config_schema.py  test_cqcode.py  test_direct_reply_qq.py  test_gate.py  test_hot_reload.py  test_m2.py  test_media.py  test_open_public.py  test_profile_consume.py  test_profile_readonly_e2e.py  test_protocol.py  test_public_group.py  test_roundtrip.py  test_selfheal_config_schema.py  test_selfheal_online_check.py  test_selfheal_qr_request.py  test_sim_seam.py  test_studentunion_direct_rules.py
apps/qq-bridge/tools/: sim_chat.py
apps/reminder-sender/: reminder-sender.js
apps/web-chat/: .env.example  README.md  pyproject.toml
apps/web-chat/deploy/: Dockerfile.m2
apps/web-chat/tests/: conftest.py  test_archive_wiring.py  test_chat_stream.py  test_config_schema.py  test_profiles.py  test_protocol.py  test_security_e2e.py
apps/web-chat/web_chat/: __init__.py  __main__.py  _runtime_path.py  config.py  profiles.py  server.py  tool_policy.py
apps/web-chat/web_chat/static/: index.html
deploy/: compose.override.example.yml  modules.json  publish-manifest.json  setup-wizard.py  update.sh
deploy/env/: assistant-gateway.env.example  feishu-bridge.prod.env.example
deploy/git-hooks/: post-receive
deploy/launchd/: install-mac-obsidian-gateway.sh
deploy/litellm/: config.yaml
deploy/migrations/: README.md
deploy/nginx/: webdav.example.conf.example
docker/: feishu-bridge.Dockerfile
docs/: README.zh-CN.md  architecture-overview.zh-CN.md  connect-your-own.zh-CN.md  development-workflow.md  instance-deploy.zh-CN.md
scripts/: add-spdx-headers.py  audit-env.sh  audit-knowledge-materials.sh  bootstrap-test-venv.sh  brain-course-ingest  brain-search  brain-zotero-webdav.sh  build-docpack.py  build-public-tree.py  check-entrypoint-drift.py  collect-logs.sh  deploy-on-orangepi.sh  docker-dev-check.sh  docker-prod-check.sh  extract-office-text.py  feishu-live-audit.py  fetch-embed-model.sh  gateway-deploy-verify.sh  gateway-live-audit.sh  install-brain-docpack-tooling.sh  install-rtime-tooling.sh  maintenance.sh  module-submit-check.py  ocr-pdf-to-md.py  ocr_attachments.py  patch-live-lark-channel-bridge-segmented-output.mjs  publish_ustc_to_brain.py  rebuild-brain-index.sh  reclassify-course-misc.py  rtime  rtime-tools-mcp.py  rtime-vault.py  rtime-zotero.py  select-docpack-samples.py  validate-codex-plugin.py  validate-docpack.py
tests/: conftest.py  test_all_mcp_tool_names_wire_valid.py  test_assistant_gateway.py  test_brain_citation_cli.py  test_brain_citation_mcp.py  test_brain_contribute.py  test_brain_docpack_cli.py  test_brain_docpack_course_intake.py  test_brain_docpack_install_tooling.py  test_brain_docpack_mcp.py  test_brain_intake_pipeline.py  test_brain_library_annotate.py  test_brain_library_cli.py  test_brain_library_contract.py  test_brain_library_edit.py  test_brain_library_maintain.py  test_brain_library_mcp.py  test_brain_library_vector.py  test_build_public_tree.py  test_check_entrypoint_drift.py  test_docker_dev_check.py  test_docker_prod_check.py  test_docpack_builder.py  test_docpack_samples.py  test_docpack_validator.py  test_feishu_live_audit.py  test_install_rtime_tooling.py  test_library_grants.py  test_library_grants_cli.py  test_library_query_contract.py  test_m10_relations.py  test_m9_consolidate.py  test_m9_extract.py  test_memory_schema.py  test_module_submit_check.py  test_ocr_attachments.py  test_post_receive_ci_hook.py  test_publish_ustc_to_brain.py  test_reminder_sender.py  test_rtime_agent_control_cli.py  (+34 more)
tools/: rtime-project-check.py
(+185 files in other folders)
