[project]
name = "feishu-claude-code"
version = "0.1.0"
description = "Bridge Claude Code CLI with Feishu/Lark via WebSocket"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "lark-oapi>=1.3.0",
    "python-dotenv>=1.0.0",
    # P2 config 收编 批 1: bot_config.FeishuBridgeConfig is a pydantic-settings model
    # on the rtime-config base (resolved from the sibling in-repo package via the uv
    # workspace; the Docker image gets it via a source COPY + _shared_runtime shim).
    "rtime-config>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]

# feishu-bridge is a uv workspace member (see root pyproject [tool.uv.workspace]);
# rtime-config resolves from the sibling in-repo package, not PyPI.
[tool.uv.sources]
rtime-config = { workspace = true }
